--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -60,6 +60,7 @@
                             <i class="fas fa-list-ul"></i> Categorias
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="../product">Todos los Productos</a>
                             <a class="dropdown-item" href="#">Variedad de Cervezas</a>
                             <a class="dropdown-item" href="#">Presentaciones</a>
                             <a class="dropdown-item" href="#">Promociones</a>
@@ -106,6 +107,7 @@
                         <i class="fas fa-list-ul"></i> Categorias
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="../product">Todos los Productos</a>
                         <a class="dropdown-item" href="#">Variedad de Cervezas</a>
                         <a class="dropdown-item" href="#">Presentaciones</a>
                         <a class="dropdown-item" href="#">Promociones</a>
