--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -122,7 +122,7 @@
                     <a class="nav-link" href="/#masVendidos">Mas Vendidos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros </a>
+                    <a class="nav-link" href="/nosotros">Nosotros </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/#footer">Contacto</a>
