--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -86,7 +86,7 @@
                     <div class="dropdown-divider"></div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
+                        <a class="nav-link" href="/nosotros"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/#footer"><i class="fas fa-headset"></i> Contacto</a>
