--- a/views/detail_cursos.ejs
+++ b/views/detail_cursos.ejs
@@ -59,44 +59,10 @@
                     </small>
                 </div>
 
-                <div class="modal animate__bounceIn" tabindex="-1" role="dialog" id="ventana-modal">
-                    <div class="modal-dialog modal-dialog-centered modal-xs">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Carrito de compras</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <p>El producto seleccionado, ha sido agregado al carrito</p>
-                            </div>
-                            <div class="modal-footer">
-                                <a href="/products">
-                                    <button type="submit" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-beer"></i>
-                                        Seguir comprando</button>
-                                </a>
-                                <form action="/carrito/<%= product.id%>" method="POST">
-                                    <a href="/carrito">
-                                        <button type="submit" class="btn btn-primary"> <i class="fas fa-shopping-basket"></i> Ir a
-                                            carrito</button>
-                                    </a>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <!-- comprar / agregar al carrito -->
-                <div class="col-12 d-flex justify-content-center mt-2 mb-3">
-                
-                    <button type="submit" class="btn btn-outline-warning mr-2" id="btnModal">
-                        <i class="fa fa-shopping-cart"></i> Agregar al Carrito
-                    </button>
-                    <button type="submit" class="btn btn-outline-warning ml-2">
-                        Comprar
-                    </button>
-                </div>
+               <!-- carrito y compras -->
+                    <% if (user != null && user.email !== product.usuario.email) { %>
+                       <%- include("partials/shopButtons") %>
+                     <% } %>
                 <!--detalle de curso-->
                 <div class="row p-0 ml-3 mr-auto border-secondary p-4">
                     <h3 class="col-12 font-weight-light">Detalle del Curso</h3>
